Updated doc with SIMD instructions